# django-miniexplorer

./: .gitignore  LICENSE  MANIFEST.in  README.md  boot_django.py  dev_requirements.txt  makemigrations.py  manage.py  migrate.py  requirements.txt  runserver.py  setup.cfg  setup.py  upload.sh
.github/: FUNDING.yml
miniexplorer/: admin.py  apps.py  models.py  tests.py  utils.py
miniexplorer/fixtures/: queries.json
miniexplorer/locale/pt_BR/LC_MESSAGES/: django.po  djangojs.po
miniexplorer/migrations/: 0001_initial.py  0002_alter_query_options.py
miniexplorer/static/: miniexplorer.css  miniexplorer.js  style.css
miniexplorer/templates/: schema_table.html
miniexplorer/templates/admin/miniexplorer/query/: change_form.html
sample_project/: instrospection.py  json  requirements.txt
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
