# setup.cfg

[metadata]
name = django-miniexplorer
version = 0.0.1
description = Mini SQL Explorer for Django Admin
long_description = file:README.md
url = https://github.com/dannluciano/django-miniexplorer
license = MIT
packages=['miniexplorer'],
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2