# setup.cfg

[metadata]
name = django-miniexplorer
version = 0.5.0
description = Mini SQL Explorer for Django Admin
# long_description = file:README.md
# long_description_content_type = text/markdown,
url = https://github.com/dannluciano/django-miniexplorer
license = MIT
author = Dann Luciano
author_email = dannluciano@gmail.com
keywords = django admin sql explorer database query
classifiers =
Development Status :: 4 - Beta
Environment :: Web Environment
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python :: 3 :: Only
Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
setuptools >= 38.3.0
install_requires =
Django >=2.2
