# setup.cfg

[metadata]
name = django-miniexplorer
version = 0.6.1
description = Mini SQL Explorer for Django Admin
# long_description = file:README.md
# long_description_content_type = text/markdown,
url = https://github.com/dannluciano/django-miniexplorer
license = MIT
author = Dann Luciano
author_email = dannluciano@gmail.com
keywords = django admin sql explorer database query
classifiers =
development status :: 6 - Beta
environment :: Web Environment
intended audience :: Developers
operating system :: OS Independent
programming language :: Python :: 3 :: Only
topic :: software development :: libraries :: Application Frameworks

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
setuptools >= 38.3.0
install_requires =
Django >=2.2
